6758179: D3D: AlphaComposite is applied incorrectly for uncached opaque BufferedImage

Reviewed-by: campbell, flar